[FIX] mail: fix image width inside the chatter
Web editor hard code the width inside the image html. This `max-width`
constraint the image inside the chatter and avoid unwanted horizontal scrollbar.

task-2389432

X-original-commit: 352e868f320344b06c4d44fd2df452080446dbb6

--- a/addons/mail/static/src/components/message/message.scss
+++ b/addons/mail/static/src/components/message/message.scss
@@ -56,6 +56,11 @@
     > p:last-of-type {
         margin-bottom: 0;
     }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 .o_Message_core {
